// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds user search views search gives relevant results 1`] = `
Array [
  Object {
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(0)",
    "handle": "cara-wiegand69.test",
    "viewer": Object {},
  },
  Object {
    "avatar": "https://bsky.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(1)",
    "displayName": "Carol Littel",
    "handle": "eudora-dietrich4.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "viewer": Object {},
  },
  Object {
    "avatar": "https://bsky.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(2)",
    "displayName": "Sadie Carter",
    "handle": "shane-torphy52.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "viewer": Object {},
  },
  Object {
    "avatar": "https://bsky.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(3)",
    "displayName": "Carlton Abernathy IV",
    "handle": "aliya-hodkiewicz.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "viewer": Object {},
  },
  Object {
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(4)",
    "handle": "carlos6.test",
    "viewer": Object {},
  },
  Object {
    "avatar": "https://bsky.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(5)",
    "displayName": "Latoya Windler",
    "handle": "carolina-mcdermott77.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "viewer": Object {},
  },
  Object {
    "avatar": "https://bsky.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(6)",
    "displayName": "Rachel Kshlerin",
    "handle": "cayla-marquardt39.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "viewer": Object {},
  },
]
`;

exports[`pds user search views typeahead gives relevant results 1`] = `
Array [
  Object {
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(0)",
    "handle": "cara-wiegand69.test",
    "viewer": Object {},
  },
  Object {
    "avatar": "https://bsky.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(1)",
    "displayName": "Carol Littel",
    "handle": "eudora-dietrich4.test",
    "viewer": Object {},
  },
  Object {
    "avatar": "https://bsky.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(2)",
    "displayName": "Sadie Carter",
    "handle": "shane-torphy52.test",
    "viewer": Object {},
  },
  Object {
    "avatar": "https://bsky.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(3)",
    "displayName": "Carlton Abernathy IV",
    "handle": "aliya-hodkiewicz.test",
    "viewer": Object {},
  },
  Object {
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(4)",
    "handle": "carlos6.test",
    "viewer": Object {},
  },
  Object {
    "avatar": "https://bsky.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(5)",
    "displayName": "Latoya Windler",
    "handle": "carolina-mcdermott77.test",
    "viewer": Object {},
  },
  Object {
    "avatar": "https://bsky.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(6)",
    "displayName": "Rachel Kshlerin",
    "handle": "cayla-marquardt39.test",
    "viewer": Object {},
  },
]
`;
